# camazotz-ixchel

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  config.h  types.h
.claude/skills/debug-pico/: SKILL.md
.claude/skills/flash-pico/: SKILL.md
.github/workflows/: deploy-visualizer.yml
drivers/: amoled_driver.cpp  amoled_driver.hpp  battery_monitor.cpp  battery_monitor.hpp  depth_wrapper.cpp  depth_wrapper.hpp  encoder_wrapper.cpp  encoder_wrapper.hpp  hw_config.c  imu_wrapper.cpp  imu_wrapper.hpp  pio_i2c.cpp  pio_i2c.hpp  pio_i2c.pio  qspi_display.pio  sdio_logger.cpp  sdio_logger.hpp
libs/: font_montserrat_bold_32.c  font_quetzalcoatl_32.c  logo_img.c  lv_conf.h
logic/: battery_math.cpp  battery_math.hpp  calibration_manager.cpp  calibration_manager.hpp  core1_nav.cpp  core1_nav.hpp  depth_math.cpp  depth_math.hpp  depth_recovery.cpp  depth_recovery.hpp  encoder_math.cpp  encoder_math.hpp  nav_math.cpp  nav_math.hpp  nav_tick.cpp  nav_tick.hpp
src/: CMakeLists.txt  main.c  main.cpp
test/: CMakeLists.txt  test_battery_math.cpp  test_button_debounce.cpp  test_depth_math.cpp  test_depth_recovery.cpp  test_display.cpp  test_encoder_math.cpp  test_nav_math.cpp  test_nav_tick.cpp  test_power_button.cpp  test_trail_map.cpp  test_types.cpp
test/stubs/: pico.h
utils/: amoled_display.cpp  amoled_display.hpp  button_debounce.cpp  button_debounce.hpp  calib_screen.cpp  calib_screen.hpp  display_interface.hpp  dual_display.hpp  lvgl_port.cpp  lvgl_port.hpp  nav_screen.cpp  nav_screen.hpp  power_button.cpp  power_button.hpp  splash_screen.cpp  splash_screen.hpp  stdio_display.cpp  stdio_display.hpp  trail_map.cpp  trail_map.hpp
visualizer/infra/: .gitignore  main.tf  outputs.tf  variables.tf
visualizer/pyvista/: csv_parser.py  dive_stats.py  exporter.py  flag_decoder.py  requirements.txt  scene.py  timeline.py  viz.py
visualizer/testdata/: complex_cave_events.csv  complex_cave_nav.csv  generate.py  straight_dive_events.csv  straight_dive_nav.csv
visualizer/web/: index.html
visualizer/web/css/: style.css
visualizer/web/js/: app.js  cave-environment.js  csv-parser.js  depth-colormap.js  dive-stats.js  environment-controls.js  flag-decoder.js  sample-data.js  scene-builder.js  simplex-noise.js  speed-colormap.js  stick-map.js  timeline.js  units.js
